# pulumi-kubernetes-coredns

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  Makefile  schema.json
.github/workflows/: build.yml  command-dispatch.yml  lint.yml  prerelease.yml  pull-request.yml  release.yml  run-acceptance-tests.yml  weekly-pulumi-update.yml
examples/: examples_py_test.go  examples_ts_test.go  go.mod  go.sum
examples/simple-coredns-dotnet/: Program.cs  Pulumi.yaml  simple-coredns-dotnet.csproj
examples/simple-coredns-py/: Pulumi.yaml  __main__.py  requirements.txt
examples/simple-coredns-ts/: Pulumi.yaml  index.ts  package.json
provider/: go.mod  go.sum
provider/cmd/pulumi-gen-kubernetes-coredns/: main.go
provider/cmd/pulumi-resource-kubernetes-coredns/: main.go  schema.json
provider/pkg/provider/: chart.go  provider.go  release.go
provider/pkg/version/: version.go
sdk/: go.mod  go.sum
sdk/dotnet/: CoreDNS.cs  Provider.cs  Pulumi.KubernetesCoreDNS.csproj  README.md  Utilities.cs
sdk/dotnet/Inputs/: CoreDNSAutoscalerArgs.cs  CoreDNSDeploymentArgs.cs  CoreDNSHPAArgs.cs  CoreDNSImageArgs.cs  CoreDNSPrometheusArgs.cs  CoreDNSPrometheusMonitorArgs.cs  CoreDNSPrometheusServiceArgs.cs  CoreDNSRBACArgs.cs  (+8 more)
sdk/java/: README.md  settings.gradle
sdk/nodejs/: coreDNS.ts  coreDNS.ts.bak  index.ts  package.json  provider.ts  provider.ts.bak  tsconfig.json
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_kubernetes_coredns/: __init__.py  _inputs.py  core_dns.py  provider.py  pulumi-plugin.json
(+40 files in other folders)
